[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/art/pinetree_top.png" type="Texture" id=1]
[ext_resource path="res://assets/art/pinetree_bottom.png" type="Texture" id=2]
[ext_resource path="res://scripts/Tree.gd" type="Script" id=3]
[ext_resource path="res://assets/art/tree_shadow.png" type="Texture" id=4]

[sub_resource type="OccluderPolygon2D" id=1]
polygon = PoolVector2Array( -18.9979, 156.654, 96.0604, 134.009, 108.301, 59.3435, 17.7228, -25.7263, -75.3031, 28.1308, -84.4833, 116.873, -27.5661, 168.894, -13.4898, 151.145 )

[node name="FirTree" type="Node2D"]
position = Vector2( 0, -0.453552 )
script = ExtResource( 3 )

[node name="TreeTrunk" type="StaticBody2D" parent="."]
position = Vector2( -3.83246, -124.342 )
collision_layer = 2
collision_mask = 133

[node name="LightOccluder2D" type="LightOccluder2D" parent="TreeTrunk"]
occluder = SubResource( 1 )

[node name="TrunkHitbox" type="CollisionPolygon2D" parent="TreeTrunk"]
polygon = PoolVector2Array( -29.4023, 118.096, 42.8152, 112.588, 22.6188, 60.5671, -27.5662, 55.671 )

[node name="Shadow" type="Sprite" parent="."]
self_modulate = Color( 0, 0, 0, 0.329412 )
position = Vector2( 1.11552, -21.3761 )
scale = Vector2( 1.16249, -1.37496 )
texture = ExtResource( 4 )

[node name="Trunk" type="Sprite" parent="."]
position = Vector2( -3.83246, -124.342 )
texture = ExtResource( 2 )

[node name="Leaves" type="Sprite" parent="."]
position = Vector2( -3.83246, -124.342 )
texture = ExtResource( 1 )

[node name="Tree" type="StaticBody2D" parent="."]
position = Vector2( -3.83246, -124.342 )

[node name="FullHitbox" type="CollisionPolygon2D" parent="Tree"]
visible = false
position = Vector2( -0.805801, 1.47747 )
scale = Vector2( 1.91319, 1.91319 )
polygon = PoolVector2Array( -4.42491, -61.3063, -21.2809, -33.7749, -27.6487, -15.0461, -38.6987, 2.74629, -40.197, 26.1573, -31.0199, 45.448, -18.8461, 48.2574, -17.3478, 56.4981, 4.00307, 63.615, 23.6609, 59.234, 33.4073, 44.3243, 44.6446, 27.4684, 42.7718, 11.3615, 33.22, -3.43423, 26.665, -21.4139, 17.3005, -39.5809, 1.7556, -61.6809 )

[node name="Tween" type="Tween" parent="."]

[node name="LeafArea" type="Area2D" parent="."]
position = Vector2( -3.83246, -124.342 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="LeafArea"]
visible = false
polygon = PoolVector2Array( 29.963, 93.6158, 89.9401, 45.2668, -1.24969, -124.873, -81.4233, 65.4632, -26.9542, 96.6758 )
